--- a/index.html
+++ b/index.html
@@ -54,41 +54,44 @@
 
 <!-- - - - end of nav - - - - -->
 
+      <div class="holder">
+         <div class='ellipse'></div>
+         <div class='ellipse ellipse2'></div>
+      </div>
+      
    <div class="pages" id="about-page">
    <div class="padding">
       <h1 class="col-lg-12 col-md-12 col-xs-12 grid-item">About Me</h1>
 
-        <div class="profile-box">
-         <div class="icon">
-            <a href="https://www.linkedin.com/in/maggiezhangdesign" target="_blank" id="logo"><img src="img/icon_linkedin.png" alt="LinkedIn" width="" height=""></a>
-            <a href="mailto:zhang.ma@husky.neu.edu"><img src="img/icon_email.png" alt="Email" width="" height=""></a>
-            <a href="tel:+15555551212"><img src="img/icon_phone.png" alt="Phone" width="" height=""></a>
-            <a href="pdf/resume.pdf" target="_blank" download="Maggie_resume"><img src="img/icon_resume.png" alt="Phone" width="" height=""></a>
-         </div>
-         <div class="contact-intro">
-            <p>Carrier pigeons are the preferred means of contact; however, e-mails and phone calls are also encouraged. Also, find me on LinkedIn and download my resume!</p>
-         </div>
-        </div>
+       <div class="icon">
+          <a href="https://www.linkedin.com/in/maggiezhangdesign" target="_blank" id="logo"><img src="img/icon_linkedin.png" alt="LinkedIn" width="" height=""></a>
+          <a href="mailto:zhang.ma@husky.neu.edu"><img src="img/icon_email.png" alt="Email" width="" height=""></a>
+          <a href="tel:+15555551212"><img src="img/icon_phone.png" alt="Phone" width="" height=""></a>
+          <a href="pdf/resume.pdf" target="_blank" download="Maggie_resume"><img src="img/icon_resume.png" alt="Phone" width="" height=""></a>
+       </div>
+       <div class="contact-intro">
+          <p>Carrier pigeons are the preferred means of contact; however, e-mails and phone calls are also encouraged. Also, find me on LinkedIn and download my resume!</p>
+       </div>
 
       <div class="col-lg-12 col-md-12 col-xs-12 grid-item">
-          <div class="profile-box">
 
              <div class="profile1"></div>
               <div class="contact-intro">
                 <p>Hey, I’m Maggie! I'm a Interaction Design major at Northeastern University with a passion for problem solving and learning new things. I get energy from using my skills to impact others and creating something both beautiful and meaningful. It's also thrilling to know that with the right people and right attitude, sparks of ideas can catch fire.</p>
                 <p>My current fixation is web design -- aside from building my skills in html and css, I enjoy teaching myself bootstrap, Sass, and jQuery, as well as following the newest trends. To create a website from wireframe to code is quite a captivating process. I spent this past month coding the website you see before you!</p>
              </div>
-             </div>
 
-             <div class="profile-box">
                <div class="profile2"></div>
                 <div class="contact-intro">
                   <p>As a third year, I've had the pleasure of designing advertisements and branding elements for various events in my community, including a regional conference on APPI identity. The co-founder and co-president of a classical and ethnic chinese dance troupe, I do branding and social media marketing for my own organization as well. When I'm not designing, coding, or dancing, you may catch me jogging on the street or enjoying food :).</p>
                </div>
-              </div>
           </div>
       </div>
-   </div>
+
+      <div class="holder">
+         <div class='ellipse'></div>
+         <div class='ellipse ellipse2'></div>
+      </div>
    </div>
 
 
