--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
       <link rel="manifest" href="favicons/manifest.json">
       <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <meta name="msapplication-TileColor" content="#da532c">
       <meta name="msapplication-TileImage" content="favicons/mstile-144x144.png">
       <meta name="theme-color" content="#ffffff">
@@ -46,7 +47,7 @@
               <span>Graphic and Interactive</span><span> Designs</span>
            </p>
            <ul id="nav">
-              <li class="nav-link active" id="about-btn"><a href="#">About</a></li>
+              <li class="nav-link active" id="about-btn"><a href="#">About Me</a></li>
               <li class="nav-link active" id="portfolio-btn"><a href="#">Portfolio</a></li>
            </ul>
         </div>
@@ -54,10 +55,17 @@
 
 <!-- - - - end of nav - - - - -->
 
-      <div class="holder">
-         <div class='ellipse'></div>
-         <div class='ellipse ellipse2'></div>
-      </div>
+  <div class="pages" id="home-page">
+    <div class="welcome_box">
+      <h1>Welcome</h1>
+      <i class="fa fa-angle-down"></i>
+    </div>
+
+  </div>
+  <div class="holder">
+     <div class='ellipse'></div>
+     <div class='ellipse ellipse2'></div>
+  </div>
       
    <div class="pages" id="about-page">
    <div class="padding">
