--- a/index.html
+++ b/index.html
@@ -108,67 +108,72 @@
 
    <div class="pages" id="portfolio-page">
 
-         <h1 class="col-lg-12 col-md-12 col-xs-12 grid-item">Portfolio</h1>
+     <h1 class="col-lg-12 col-md-12 col-xs-12 grid-item">Portfolio</h1>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
-                <a class="thumbnail" href="img/projects/EonMockup.jpg" data-lightbox="gallery1">
-                    <img class="img-responsive test-stuff-stuff" src="img/thumbnails/EonMockup.jpg" alt="">
-                </a>
-                <a href="img/projects/EonLogo.jpg" data-lightbox="gallery1"></a>
-                <a href="img/projects/EonDrafts.jpg" data-lightbox="gallery1"></a>
-                <p>Eon Brand Identity</p>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
-                <a class="thumbnail" href="img/projects/CSACulturePoster.jpg" data-lightbox="gallery2">
-                    <img class="img-responsive test-stuff-stuff" src="img/thumbnails/CSACulturePoster.jpg" alt="">
-                </a>
-                <a href="img/projects/CSACultureBanner.jpg" data-lightbox="gallery2"></a>
-                <p>Culture Show Event Poster</p>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
-                <a class="thumbnail" href="img/projects/Jenson1.jpg" data-lightbox="gallery3">
-                    <img class="img-responsive" src="img/thumbnails/Jenson1.jpg" alt="">
-                </a>
-                <a href="img/projects/HalfAss.jpg" data-lightbox="gallery3"></a>
-                <a href="img/projects/rain.jpg" data-lightbox="gallery3"></a>
-                <p>Typography Practice</p>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
-                <a class="thumbnail" href="img/projects/threeMenbook.jpg" data-lightbox="gallery4">
-                    <img class="img-responsive" src="img/thumbnails/threeMenbook.jpg" alt="">
-                </a>
-                <a href="img/projects/threemenprocess.jpg" data-lightbox="gallery4"></a>
-                <a href="img/projects/threemenspread.jpg" data-lightbox="gallery4"></a>
-                <a href="img/projects/threemenspread2.jpg" data-lightbox="gallery4"></a>
-                <p>Book Design</p>
-            </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
+            <a class="thumbnail" href="img/projects/EonMockup.jpg" data-lightbox="gallery1">
+                <img class="img-responsive test-stuff-stuff" src="img/thumbnails/EonMockup.jpg" alt="">
+            </a>
+            <a href="img/projects/EonLogo.jpg" data-lightbox="gallery1"></a>
+            <a href="img/projects/EonDrafts.jpg" data-lightbox="gallery1"></a>
+            <p>Eon Brand Identity</p>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
+            <a class="thumbnail" href="img/projects/CSACulturePoster.jpg" data-lightbox="gallery2">
+                <img class="img-responsive test-stuff-stuff" src="img/thumbnails/CSACulturePoster.jpg" alt="">
+            </a>
+            <a href="img/projects/CSACultureBanner.jpg" data-lightbox="gallery2"></a>
+            <p>Culture Show Event Poster</p>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
+            <a class="thumbnail" href="img/projects/Jenson1.jpg" data-lightbox="gallery3">
+                <img class="img-responsive" src="img/thumbnails/Jenson1.jpg" alt="">
+            </a>
+            <a href="img/projects/HalfAss.jpg" data-lightbox="gallery3"></a>
+            <a href="img/projects/rain.jpg" data-lightbox="gallery3"></a>
+            <p>Typography Practice</p>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
+            <a class="thumbnail" href="img/projects/threeMenbook.jpg" data-lightbox="gallery4">
+                <img class="img-responsive" src="img/thumbnails/threeMenbook.jpg" alt="">
+            </a>
+            <a href="img/projects/threemenprocess.jpg" data-lightbox="gallery4"></a>
+            <a href="img/projects/threemenspread.jpg" data-lightbox="gallery4"></a>
+            <a href="img/projects/threemenspread2.jpg" data-lightbox="gallery4"></a>
+            <p>Book Design</p>
+        </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
-                <a class="thumbnail" href="img/projects/PeonyPoster.jpg" data-lightbox="gallery5">
-                    <img class="img-responsive" src="img/thumbnails/PeonyPoster.jpg" alt="">
-                </a>
-                <a href="img/projects/Peonypamphlet.jpg" data-lightbox="gallery5"></a>
-                <a href="img/projects/Teahouse.jpg" data-lightbox="gallery5"></a>
-                <p>Play Posters and Pamphlet</p>
-            </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
+            <a class="thumbnail" href="img/projects/PeonyPoster.jpg" data-lightbox="gallery5">
+                <img class="img-responsive" src="img/thumbnails/PeonyPoster.jpg" alt="">
+            </a>
+            <a href="img/projects/Peonypamphlet.jpg" data-lightbox="gallery5"></a>
+            <a href="img/projects/Teahouse.jpg" data-lightbox="gallery5"></a>
+            <p>Play Posters and Pamphlet</p>
+        </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
-                <a class="thumbnail" href="img/projects/mistafish.png" data-lightbox="gallery6">
-                    <img class="img-responsive" src="img/thumbnails/mistafish.png" alt="">
-                </a>
-                <a href="img/projects/Rams.png" data-lightbox="gallery6"></a>
-                <a href="img/projects/5Dfinal.jpg" data-lightbox="gallery6"></a>
-                <p>Interactive Design</p>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
-                <a class="thumbnail" href="img/projects/ashley.jpg" data-lightbox="gallery7">
-                    <img class="img-responsive" src="img/thumbnails/ashley.jpg" alt="">
-                </a>
-                <a href="img/projects/TinaBe.jpg" data-lightbox="gallery7"></a>
-                <a href="img/projects/grandma.jpg" data-lightbox="gallery7"></a>
-                <a href="img/projects/flowers.jpg" data-lightbox="gallery7"></a>
-                <p>Digital and Fine Art</p>
-            </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
+            <a class="thumbnail" href="img/projects/mistafish.png" data-lightbox="gallery6">
+                <img class="img-responsive" src="img/thumbnails/mistafish.png" alt="">
+            </a>
+            <a href="img/projects/Rams.png" data-lightbox="gallery6"></a>
+            <a href="img/projects/5Dfinal.jpg" data-lightbox="gallery6"></a>
+            <p>Interactive Design</p>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6 grid-item">
+            <a class="thumbnail" href="img/projects/ashley.jpg" data-lightbox="gallery7">
+                <img class="img-responsive" src="img/thumbnails/ashley.jpg" alt="">
+            </a>
+            <a href="img/projects/TinaBe.jpg" data-lightbox="gallery7"></a>
+            <a href="img/projects/grandma.jpg" data-lightbox="gallery7"></a>
+            <a href="img/projects/flowers.jpg" data-lightbox="gallery7"></a>
+            <p>Digital and Fine Art</p>
+        </div>
+
+      <div class="holder">
+         <div class='ellipse'></div>
+         <div class='ellipse ellipse2'></div>
+      </div>
    </div>
 
 <!-- - - - end of portfolio page - - - - -->
